[tool.poetry]
name = "rest-api-notebooks"
version = "0.1.0"
description = "A collection of Jupyter notebooks that illustrate how to use the Wattwatchers Rest API."
authors = ["Wattwatchers <dev@wattwatchers.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.1"
pytz = "^2024.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
